fixed link color

--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Bear Call Mastering offers world-class audio cd mastering for professional musicans, bands and artists at affordable rates.">
+    <meta name="author" content="Jon Cohrs - Bear Call Audio CD Mastering">
 
-    <title>Bear Call Mastering</title>
+    <title>Bear Call Mastering - Audio Mastering and Post Production</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
-
-    <!--custom css-->
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/custom.css">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -70,7 +67,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Precision mastering that brings out detail, nuance, and professional sonic refinement.</p>
+            <p class="text-faded mb-5">Precision mastering that brings out detail, nuance, </br>and professional sonic refinement.</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Find Out More</a>
           </div>
         </div>
@@ -126,10 +123,10 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Mastering and Post for New York City and the Hudson Valley.</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Jon Cohrs is an audio engineer and media artist based in Woodstock, NY.  For the last 15 years he’s been working as an audio mastering engineer working on records and films with artists like Blind Pilot, Rirkrit Tiravanija, Tara Jane O’Neil, Tin Hat, Laurie Anderson, Cory Arcangel, Talkdemonic among others. After 8 years of running Spleenless Mastering in Portland Oregon and recording at Larry Crane’s, Jackpot! Recording Studio, Jon Cohrs moved to New York City where he reopen Spleenless Mastering in Brooklyn, where it has gained a reputation for quality, affordability, and most importantly in fostering an interactive relationship with the artists.
-            </p><p class="text-faded mb-4">In 2017, Jon Cohrs relocated to Woodstock, New York, where he opened Bear Call Mastering with an improve studio and equipment.
-                He has received fellowships for his sound and art work at The Banff Centre, Eyebeam Art and Technology Center and New York Foundation for the Arts. He has taught media art and sound at RPI, Parsons The New School for Design, Pratt Institute, NYU ITP, SUNY Purchase in the Film + Media and the Finish Academy of Fine Art.
-                </p>
+            <div class="white-links">
+              <p class="text-faded mb-4">Jon Cohrs is an audio engineer and media artist based in Woodstock, NY.  For the last 15 years he’s been working as an audio mastering engineer working on records and films with artists like <a target="_blank" href="http://www.blindpilot.com/">Blind Pilot</a>, <a target="_blank" href="http://horsefeatherstheband.com/">Horsefeathers</a>, <a target="_blank" href="https://www.guggenheim.org/artwork/artist/rirkrit-tiravanija">Rirkrit Tiravanij</a>, <a target="_blank" href="https://tarajaneoneil.com">Tara Jane O’Neil,<a href="http://https://en.wikipedia.org/wiki/Tin_Hat">Tin Hat</a>, <a href="http://www.laurieanderson.com/">Laurie Anderson</a>, <a target="_blank" href="http://www.coryarcangel.com/">Cory Arcangel</a>, <a target="_blank" href="http://talkdemonic.com/">Talkdemonic</a> among others. After 8 years of running Spleenless Mastering in Portland, Oregon and recording at <a href="https://tapeop.com/">TapeOp Magazine</a> founder, Larry Crane’s, <a target="_blank" href="http://jackpotrecording.com/">Jackpot! Recording Studio</a>, Jon Cohrs moved to New York City where he moved <a target="_blank" href="http://spleenlessmastering.com">Spleenless Mastering</a> to Brooklyn, where it gained a reputation for quality, affordability, and most importantly in fostering an interactive relationship with the artists. In 2017, Jon Cohrs opened <a target="_blank" href="http://bearcallmastering.com">Bear Call Mastering</a> in Kingston - Woodstock NY, with the same mission but with an improve studio and equipment.
+              </p>
+            </div>
               <hr class="light my-4">
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contact">Get Started!</a>
           </div>
@@ -439,7 +436,7 @@
           <!-- Content -->
           <h6 class="text-uppercase font-weight-bold">Bear Call Mastering</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>Professional Music Mastering for the rest of us.</p>
+          <p>15 Years of Professional Audio Mastering</p>
 
         </div>
         <!-- Grid column -->
@@ -499,7 +496,7 @@
           <p>
             <i class="fa fa-envelope mr-3"></i>jon@bearcallmastering.com</p>
           <p>
-            <i class="fa fa-phone mr-3"></i> 971.404.1463</p>
+            <i class="fa fa-phone mr-3"></i>971.404.1463</p>
 
         </div>
         <!-- Grid column -->
@@ -512,7 +509,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
-      <a href="https://mdbootstrap.com/bootstrap-tutorial/"> MDBootstrap.com</a>
+      <a href="https://BearCallMastering.com/"> BearCallMastering.com</a>
     </div>
     <!-- Copyright -->
 
