fixed about color

--- a/clients.html
+++ b/clients.html
@@ -71,15 +71,15 @@
       </div>
     </header>
 
-    <!-- <section class="bg-primary" id="about"> -->
+    <section class="" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Past Clients</h2>
-            <hr class="light my-4">
-            <div>
+            <h2 class="section-heading">Past Clients</h2>
+            <hr class="my-4">
+            <div class="clientsList text-left">
             <p class="mb-4 text-faded text-white col-4">
-              <ul class="rates">
+              <ul class="clientSpacing">
                 <li><a href="https://www.samospovat.com/" target="_blank">Sam Ospovat - Ride Angles - Mastering</a></li>
                 <li><a href="https://trevordickson.bandcamp.com/album/how-to-say" target="_blank">Trevor Dickson - How To Say - Mastering</a></li>
                 <li><a href="https://littlehustlenyc.com/" target="_blank">Little Hustle - Wipe That Face Off Your Head - Mastering</a></li>
@@ -300,6 +300,18 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127093320-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-127093320-1');
+  </script>
+
+
 
   </body>
 
