--- a/index.html
+++ b/index.html
@@ -117,14 +117,16 @@
       </div>
     </section>
 
-    <section class="bg-primary" id="about">
+    <section class="" id="about" style="background-color: #F05F40;">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Mastering and Post for New York City and the Hudson Valley.</h2>
+            <h2 class="section-heading text-white">Mastering and Post for the Hudson Valley.</h2>
             <hr class="light my-4">
             <div class="white-links">
-              <p class="text-faded mb-4">Jon Cohrs is an audio engineer and media artist based in Woodstock, NY.  For the last 15 years he’s been working as an audio mastering engineer working on records and films with artists like <a target="_blank" href="http://www.blindpilot.com/">Blind Pilot</a>, <a target="_blank" href="http://horsefeatherstheband.com/">Horsefeathers</a>, <a target="_blank" href="https://www.guggenheim.org/artwork/artist/rirkrit-tiravanija">Rirkrit Tiravanij</a>, <a target="_blank" href="https://tarajaneoneil.com">Tara Jane O’Neil,<a href="http://https://en.wikipedia.org/wiki/Tin_Hat">Tin Hat</a>, <a href="http://www.laurieanderson.com/">Laurie Anderson</a>, <a target="_blank" href="http://www.coryarcangel.com/">Cory Arcangel</a>, <a target="_blank" href="http://talkdemonic.com/">Talkdemonic</a> among others. After 8 years of running Spleenless Mastering in Portland, Oregon and recording at <a href="https://tapeop.com/">TapeOp Magazine</a> founder, Larry Crane’s, <a target="_blank" href="http://jackpotrecording.com/">Jackpot! Recording Studio</a>, Jon Cohrs moved to New York City where he moved <a target="_blank" href="http://spleenlessmastering.com">Spleenless Mastering</a> to Brooklyn, where it gained a reputation for quality, affordability, and most importantly in fostering an interactive relationship with the artists. In 2017, Jon Cohrs opened <a target="_blank" href="http://bearcallmastering.com">Bear Call Mastering</a> in Kingston - Woodstock NY, with the same mission but with an improve studio and equipment.
+              <p class="text-faded mb-4">Jon Cohrs is an audio engineer and media artist based in Woodstock, NY.  For the last 15 years he’s been working as an audio mastering engineer working on records and films with artists like <a target="_blank" href="http://www.blindpilot.com/">Blind Pilot</a>, <a target="_blank" href="http://horsefeatherstheband.com/">Horsefeathers</a>, <a target="_blank" href="https://www.guggenheim.org/artwork/artist/rirkrit-tiravanija">Rirkrit Tiravanij</a>, <a target="_blank" href="https://tarajaneoneil.com">Tara Jane O’Neil,<a href="http://https://en.wikipedia.org/wiki/Tin_Hat" target="_blank">Tin Hat</a>, <a href="http://www.laurieanderson.com/">Laurie Anderson</a>, <a target="_blank" href="http://www.coryarcangel.com/">Cory Arcangel</a>, <a target="_blank" href="http://talkdemonic.com/">Talkdemonic</a> among others. He got his start recording at Larry Crane’s, <a target="_blank" href="http://jackpotrecording.com/">Jackpot! Recording Studio</a>, the founder of <a href="https://tapeop.com/" target="_blank">TapeOp Magazine</a>.
+              </p>
+              <p class="text-faded mb-4">In 2017, Jon Cohrs opened <a target="_blank" href="http://bearcallmastering.com">Bear Call Mastering</a> in Kingston - Woodstock NY, after running <a target="_blank" href="http://spleenlessmastering.com">Spleenless Mastering</a> for 15 years in Portland, Oregon and in Brooklyn, New York. He has a reputation for quality, affordability, and most importantly in fostering an interactive relationship with the artists.
               </p>
             </div>
               <hr class="light my-4">
@@ -383,8 +385,8 @@
     <!-- Footer -->
 <footer class="page-footer font-small unique-color-dark">
 
-    <div style="background-color: #6351ce;">
-      <div class="container">
+    <div style="background-color: #F05F40;">
+      <div class="container text-white white-links">
 
         <!-- Grid row-->
         <div class="row py-4 d-flex align-items-center">
@@ -399,19 +401,19 @@
           <div class="col-md-6 col-lg-7 text-center text-md-right">
 
             <!-- Facebook -->
-            <a class="fb-ic">
+            <a class="fb-ic" href="https://www.facebook.com/BearCallMastering/" target="_blank">
               <i class="fa fa-facebook white-text mr-4"> </i>
             </a>
             <!-- Twitter -->
-            <a class="tw-ic">
+            <a class="tw-ic" href="https://twitter.com/splnlss" target="_blank">
               <i class="fa fa-twitter white-text mr-4"> </i>
             </a>
             <!--Linkedin -->
-            <a class="li-ic">
+            <a class="li-ic" href="https://www.linkedin.com/in/joncohrs/" target="_blank">
               <i class="fa fa-linkedin white-text mr-4"> </i>
             </a>
             <!--Instagram-->
-            <a class="ins-ic">
+            <a class="ins-ic" href="https://www.instagram.com/splnlss/" target="_blank">
               <i class="fa fa-instagram white-text"> </i>
             </a>
 
@@ -527,6 +529,17 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127093320-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127093320-1');
+</script>
+
 
   </body>
 
