added new clients header

--- a/clients.html
+++ b/clients.html
@@ -26,6 +26,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/creative.css" rel="stylesheet">
+    <link href="css/clients.css" rel="stylesheet">
 
   </head>
 
@@ -57,7 +58,7 @@
       </div>
     </nav>
 
-    <header class="masthead text-center text-white d-flex">
+    <header class="masthead clients-masthead text-center text-white d-flex">
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
@@ -87,10 +88,25 @@
                 <li><a href="http://gurujitune.com/" target="_blank">Guruji - Mastering</a></li>
                 <li><a href="https://www.guggenheim.org/artwork/artist/rirkrit-tiravanija.com" target="_blank">Ali: Fear Eats the Soul - remake by Rirkrit Tiravanija - Feature Post Production & Sound Mix</a><li/>
                 <li><a href="http://www.backwatermovie.com" target="_blank">Back Water - Feature Post Production & Sound Mix</a><li/>
+                <li><a href="http://ourida.com" target="_blank">Ourida - Wings - Mastering</a></li>
+                <li><a href="http://www.ensembleetal.com/" target="_blank">Ensemble, et al. - patterns & improvisations vol. 1 - Mastering</a></li>
+                <li><a href="https://marcschoenberg.com/" target="_blank">Marc Schoenberg - Jupter - Mastering</a></li>
+                <li><a href="http://www.dowally.com/" target="_blank">Dowally - Somewhere - Mastering</a></li>
+                <li><a href="http://www.dinamaccabee.com/" target="_blank">Dina Maccabee - The World is in the Work - Mastering</a></li>
+                <li><a href="" target="_blank">Joseph Lee - Mastering</a></li>
+                <li><a href="http://seanhayesmusic.com" target="_blank">Sean Hayes - This Is Happening - Mastering</a></li>
+                <li><a href="" target="_blank">Candace Thompson - Dialog Editing and Sound Effects</a></li>
+                <li><a href="http://sheldonbrownmusic.com" target="_blank">Sheldon Brown - Sheldon Brown Group - Mastering</a></li>
+                <li><a href="https://multitudes.bandcamp.com/" target="_blank">Multitudes - Electricity Pylon Lion Jazz Shakeup - Mastering</a></li>
+                <li><a href="http://www.jazzmusicarchives.com/album/ben-goldberg/invisible-guy-knuckle-sandwich" target="_blank">Invisible Guy - Knuckle Sandwich -  Bag Production Records - Mastering</a></li>
+                <li><a href="http://musicandthemindofthe.world/" target="_blank">Tony Conrad - Music And The Mind Of The World - Restoration & Mastering</a></li>
+                <li><a href="https://www.hotnewhiphop.com/fred-the-godson-contraband-mixtape.78269.html" target="_blank">Fred the Godson - Contraband - Heatmakerz - Mastering</a></li>
+                <li><a href="https://russianarksakura.bandcamp.com/" target="_blank">Russian Ark Sakura - A Weak Force That Binds - Mastering</a></li>
                 <li><a href="http://www.badabingrecords.com/slothrust" target="_blank">Slothrust: Of Course You Do - Ba da Bing Records - Mastering</a><li/>
                 <li><a href="http://www.austinwillacy.com/solo" target="_blank">Austin Willacy&nbsp;&#8211; Open Up Your Heart- Mastering</a><li/>
                 <li><a href="https://idgydean.bandcamp.com" target="_blank">Iggy Dean &#8211; Mastering</a><li/>
                 <li><a href="http://bitchmusic.com/" target="_blank"> Bitch &#8211; Make This Break This &#8211; Kill Rock Stars &#8211; Mastering</a><li/><a href="http://bitchmusic.com/store/ferron-boulder/">Ferron &#8211; Boulder &#8211; Mastering</a><li/>
+                <li><a href="https://northernspyrecs.com/renata-zeiguer/" target="_blank">Renata Zeiguer &#8211; Self Titled EP &#8211; Northern Spy Records &#8211; Mastering</a><li/>
                 <li><a href="http://meklithadero.com/" target="_blank">Meklit &#8211; We Are Alive &#8211; Six Degrees Records &#8211; Mastering</a><li/>
                 <li><a href="http://www.nebraskamovie.com/" target="_blank">Nebraska Film Soundtrack &#8211; Mark Orton &#8211; Milan Records &#8211; Mastering</a><li/>
                 <li><a href="http://ensembleetal.com/" target="_blank"> Ensemble et al. &#8211; Present Point Past &#8211; Mastering</a><li/>
@@ -277,12 +293,12 @@
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>971.404.1463</p>
+            <p><a href="tel:1-718-569-8504">718.569.8504</a></p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:jon@splnlss.com">jon@splnlss.com</a>
+              <a href="mailto:jon@BearCallMastering.com">jon@BearCallMastering.com</a>
             </p>
           </div>
         </div>
