updated equipment list

--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
                 <a href="http://www.rme-audio.de/en_products_hdspe_raydat.php" target="_blank"><b>RME</b> HDSPe AES</a>
             </p>
             <p>
+              <a href="https://www.steinberg.net/en/products/wavelab" target="_blank"><b>Wavelab Pro</b></a>
+          </p>
+            <p>
                 <a href="http://www.avid.com/US/products/Pro-Tools-Software" target="_blank"><b>Pro Tools</b> Ultimate</a>
             </p>
             <p>
