added band names

--- a/clients.html
+++ b/clients.html
@@ -81,6 +81,7 @@
             <div class="clientsList text-left">
             <p class="mb-4 text-faded text-white col-4">
               <ul class="clientSpacing">
+                <li><a href="https://michelleamadormusic.com/ target="_blank">Michelle Amador -  You Are Where You Belong - Mastering</a></li>
                 <li><a href="https://www.samospovat.com/" target="_blank">Sam Ospovat - Ride Angles - Mastering</a></li>
                 <li><a href="https://trevordickson.bandcamp.com/album/how-to-say" target="_blank">Trevor Dickson - How To Say - Mastering</a></li>
                 <li><a href="https://littlehustlenyc.com/" target="_blank">Little Hustle - Wipe That Face Off Your Head - Mastering</a></li>
